--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:background="#fff"
+    android:layout_height="wrap_content"
     android:padding="10dp">
-    <Button
+    <TextView
         android:layout_width="60dp"
         android:layout_height="40dp"
         android:padding="5dp"
-        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textSize="25dp"
         android:text="5★"
+        android:fontFamily="sans-serif-condensed"
         android:id="@+id/rating_user_commentator"
         android:textColor="#fff"
         android:background="#3f51b5"/>
@@ -16,6 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Jim Moriarty"
+        android:textColor="#000"
+        android:background="#fff"
+        android:fontFamily="sans-serif-condensed"
         android:textSize="20dp"
         android:id="@+id/name_commentator"
         android:layout_toRightOf="@+id/rating_user_commentator"
@@ -25,7 +32,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
+        android:fontFamily="sans-serif-condensed"
         android:paddingTop="10dp"
+        android:id="@+id/user_review_comment"
         android:paddingBottom="10dp"
         android:layout_marginTop="10dp"
         android:textSize="15dp"
