--- a/app/src/main/res/layout/user_ratings_reviews.xml
+++ b/app/src/main/res/layout/user_ratings_reviews.xml
@@ -23,8 +23,9 @@
             android:layout_height="wrap_content"
             />
         <RatingBar
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:progressBackgroundTint="#3f51b5"
             android:id="@+id/rating_bar"
             android:numStars="5"
