--- a/app/src/main/res/layout/calorie_content.xml
+++ b/app/src/main/res/layout/calorie_content.xml
@@ -15,8 +15,8 @@
         <com.github.mikephil.charting.charts.PieChart
             android:layout_width="match_parent"
             android:layout_marginTop="-20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:padding="10dp"
             android:layout_height="400dp"
             android:id="@+id/fat_protein">
