added homePage layout

--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"
+                android:hint="Email ID"
                 android:textColorHint="#d9e5f3"
                 android:layout_marginLeft="15dp"
                 android:background="#00000000"
@@ -151,7 +151,7 @@
                 android:id="@+id/email_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Mobile Number"
+                android:hint="Username"
                 android:textColorHint="#d9e5f3"
                 android:layout_marginLeft="15dp"
                 android:background="#00000000"
